charts/template/ing-prod.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agora
  namespace: ${namespace}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: "If-None-Match"
spec:
  tls:
  - hosts:
    - ${STAG_URL}
    secretName: ${STAG_TLS}
  rules:
  - host: ${STAG_URL}
    http:
      paths:
        - path: /portal
          pathType: Prefix
          backend:
            service:
              name: {svc}
              port:
                number: 80
